--- a/plugin.xml
+++ b/plugin.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<e107Plugin name="Current Weather" lan="LAN_WEATHER_MENU_NAME" version="1.0" date="2014-12-15" compatibility="2.0" installRequired="true" >
+<e107Plugin name="Current Weather" lan="LAN_WEATHER_MENU_NAME" version="1.1" date="2014-12-15" compatibility="2.0" installRequired="true" >
 	<author name="Roland Graf (OxigenO2)" url="www.oxigen.mablog.eu" />
 	<summary lan="LAN_WEATHER_MENU_SUMM">Displays city weather</summary>
 	<description lan="LAN_WEATHER_MENU_DESC">Displays city weather on the menu</description>
@@ -18,5 +18,6 @@
 		<pref name='current_weather_scheme'>color</pref>
 		<pref name='current_weather_deatils'>0</pref>
 		<pref name='current_weather_link'>1</pref>
+		<pref name='current_weather_appid'></pref>
 	</pluginPrefs>
 </e107Plugin>
